Added src link fetcher func

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "UNLICENSED",
   "main": "src/bot.js",
+  "type": "module",
   "scripts": {
     "start": "node src/bot.js"
   },
