--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "node src/bot.js"
   },
   "dependencies": {
+    "badwords-list": "^1.0.0",
     "damerau-levenshtein-js": "^1.1.7",
+    "node-fetch": "^2.6.1",
     "tmi.js": "^1.5.0",
-    "twitch-js": "^2.0.0-beta.33",
-    "node-fetch": "^2.6.1"
+    "twitch-js": "^2.0.0-beta.33"
   }
 }
